apps/dev/app1/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: example-app
  namespace: app1
spec:
  replicas: 2
  selector:
    matchLabels:
      app: example-app
  template:
    metadata:
      labels:
        app: example-app
    spec:
      containers:
      - name: example-app
        image: nginx:latest
        ports:
        - containerPort: 80
        volumeMounts:
        - name: index-html
          mountPath: /etc/nginx/html/index.html
      volumes:
      - name: index-html
        configMap:
          name: index-html-configmap
