apps/dev/app1/service.yml
apiVersion: v1
kind: Service
metadata:
  name: example-app-service
  namespace: app1
spec:
  selector:
    app: example-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
